2002-04-15  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* *game.cc: made output for is_installed slightly more useful
	* *game.cc, files/utils.*: patch by Paul Hebble:
	changed BG/SI_Game::is_installed not to require a path anymore

2002-04-15  Max Horn  <max@quendi.de>
	* docs/xml/*: Makeover of the XML doc system.

2002-04-14  Ryan Nunn  <triforce@merlin.net.au>
	* exult.cc : Fixed a path problem
	* palette.cc : std namespace stuff
	* game.cc : DON'T write the savegame config setting by default at the 
	  moment. Though really the damage this may do, has already been done.
	* files/utils.cc : Changed things so get_system_path() will attemp to
	  convert long filenames in Windows to short filenames. This is an
	  attempt to 'fix' the long filename issue.

2002-04-13  Jeff Freedman  <jeff@amy.nerble.net>

	* exult.cc: Disable right-click-close-gump if dragging.

2002-04-11  Jeff Freedman  <jeff@amy.nerble.net>

	* drag.cc (Dragging_info): If quantity-object is okay_to_take,
	make sure the part that's split off also is.

2002-04-09  Jeff Freedman  <jeff@amy.nerble.net>

	* shapes/vgafile.cc (Shape): Reset() sets frames=0, fixing a crash
	in ExultStudio.
	* mapedit/shapelst.cc:  First pass at creating a shape from a font
	file.

2002-04-09  Jeff Freedman  <jsf@usf-cf-x86-linux-1>

	* configure.in, acconfig.h: Test for Freetype2.

2002-04-09  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* VideoOptions_gump.cc: minor change for Solaris

2002-04-09  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* configure.in, mapedit/Makefile.am: cleaned up gtk/libglade conditionals

2002-04-08  Dominik Reichardt <gigdr@tesionmail.de>
	* docs/xml: added exult_studio.xml (ExultStudio Documentation)
		    updated docs.xml, faq.xml, docs.dtd, *.xsl
	* docs/ReadMe.html, FAQ.html, exult_studio.txt updated.
	  added exult_studio.html
	* FAQ, Readme updated

2002-04-08  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>